meja/tests/row-pattern-distinct-closed.meja
let f = fun (x : [< `A | `B > `A]) => {
  switch (x) {
    | `C => ()
    | _ => ()
  };
};
